updated file paths

--- a/firstDemo/ar.html
+++ b/firstDemo/ar.html
@@ -43,8 +43,8 @@
     <a-marker-camera preset='hiro'></a-marker-camera>
   </a-scene>
 
-  <div class='control-layer overlay'>
+<!--   <div class='control-layer overlay'> 
     <button type="button" >Click Me!</button>  
-  </div>
+  </div> -->
   
 </body>
