fixed minor bugs

--- a/firstDemo/ar.html
+++ b/firstDemo/ar.html
@@ -31,8 +31,8 @@
   <a-scene embedded arjs='debugUIEnabled: false;'>
 
   	<a-assets>
-      <a-asset-item id="shell_obj" src="startupshell-logo3D_red.obj"></a-asset-item>
-      <a-asset-item id="shell_mtl" src="startupshell-logo3D_red.mtl"></a-asset-item>
+      <a-asset-item id="shell_obj" src="./models/startupshell-logo3D_red.obj"></a-asset-item>
+      <a-asset-item id="shell_mtl" src="./models/startupshell-logo3D_red.mtl"></a-asset-item>
   	</a-assets>
 
     <a-obj-model src="#shell_obj" mtl="#shell_mtl"></a-obj-model>
