--- a/experiences/MilkBoyArtHouse.html
+++ b/experiences/MilkBoyArtHouse.html
@@ -51,6 +51,8 @@
 
             document.querySelector('#DesktopDirections').style.display = 'none';
         }
+
+        addClick();
 	});
 
     function addClick(){
