--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div class='card cardShadow'>
       <div class='card-block '>
-        <h3 class='card-header'>VR Experience</h3>
+        <h3 class='card-header'>Bar/Concert Venue Virtual Experience</h3>
         <iframe src="./experiences/MilkBoyArtHouse.html"></iframe>
       </div>
     </div>
