--- a/firstDemo/ar.html
+++ b/firstDemo/ar.html
@@ -28,7 +28,7 @@
 
 <body style='margin : 0px; overflow: hidden;'>
 
-  <a-scene embedded arjs='debugUIEnabled: false;'>
+  <a-scene embedded arjs='debugUIEnabled: true;'>
 
   	<a-assets>
       <a-asset-item id="shell_obj" src="./models/startupshell-logo3D_red.obj"></a-asset-item>
