--- a/firstDemo/ar1.html
+++ b/firstDemo/ar1.html
@@ -2,14 +2,22 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='trackingMethod: best;'>
+		<a-assets>
+	      <a-asset-item id="shell_obj" src="./models/startupshell-logo3D_red.obj"></a-asset-item>
+	      <a-asset-item id="shell_mtl" src="./models/startupshell-logo3D_red.mtl"></a-asset-item>
+	      <a-asset-item id="exoItalicFont" src="./fonts/exo2BlackItalic.typeface.json"></a-asset-item>
+  		</a-assets>
       <a-anchor hit-testing-enabled='true'>
    		<!-- Add your augmented reality here -->
-			<a-box position='0 0.5 0' material='opacity: 0.5; side:double; color:red;'>
+			<!-- <a-box position='0 0.5 0' material='opacity: 0.5; side:double; color:red;'>
 				<a-torus-knot radius='0.26' radius-tubular='0.05'>
 					<a-animation attribute="rotation" to="360 0 0" dur="5000" easing='linear' repeat="indefinite"></a-animation>
 				</a-torus-knot>
-			</a-box>
+			</a-box> -->
 			<!-- <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box> -->
+			<a-obj-model src="#shell_obj" mtl="#shell_mtl" position="0, 1.5, 2.5"></a-obj-model>
+	      <a-entity position="-.2 0 2.0" rotation="0 90 0" text-geometry="value: Aesthetic; font: #exoItalicFont; style: italic; size: 0.8; weight: bold; height: 0;"
+	                    material="shader: flat; color: #6b070a"></a-entity>
       </a-anchor>
 		<a-camera-static/>
 	</a-scene>
