--- a/firstDemo/ar1.html
+++ b/firstDemo/ar1.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/examples/vendor/aframe/build/aframe.min.js"></script>
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
@@ -16,7 +17,7 @@
 			</a-box> -->
 			<!-- <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box> -->
 			<a-obj-model src="#shell_obj" mtl="#shell_mtl" position="0, 1.5, 2.5"></a-obj-model>
-	      <a-entity position="-.2 0 2.0" rotation="0 90 0" text-geometry="value: Aesthetic; font: #exoItalicFont; style: italic; size: 0.8; weight: bold; height: 0;"
+	      <a-entity position="-.2 .5 2.0" rotation="0 90 0" text-geometry="value: Startup Shell; font: #exoItalicFont; style: italic; size: 0.8; weight: bold; height: 0;"
 	                    material="shader: flat; color: #6b070a"></a-entity>
       </a-anchor>
 		<a-camera-static/>
