--- a/firstDemo/ar1.html
+++ b/firstDemo/ar1.html
@@ -16,8 +16,8 @@
 				</a-torus-knot>
 			</a-box> -->
 			<!-- <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box> -->
-			<a-obj-model src="#shell_obj" mtl="#shell_mtl" position="0, 1.5, 2.5"></a-obj-model>
-	      <a-entity position="-.2 .5 2.0" rotation="0 90 0" text-geometry="value: Startup Shell; font: #exoItalicFont; style: italic; size: 0.8; weight: bold; height: 0;"
+			<a-obj-model src="#shell_obj" mtl="#shell_mtl" scale=".5 .5 .5" position="0, 1.5, 2.5"></a-obj-model>
+	      <a-entity position="0 1.5 2.5" rotation="0 90 0" text-geometry="value: Startup Shell; font: #exoItalicFont; style: italic; size: 0.8; weight: bold; height: 0;"
 	                    material="shader: flat; color: #6b070a"></a-entity>
       </a-anchor>
 		<a-camera-static/>
