--- a/firstDemo/ar1.html
+++ b/firstDemo/ar1.html
@@ -19,9 +19,9 @@
 				</a-torus-knot>
 			</a-box> -->
 			<!-- <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box> -->
-			<a-obj-model src="#shell_obj" mtl="#shell_mtl" scale=".5 .5 .5" position="0, 1.5, 2.5">
-				<a-animation attribute="rotation" to="360 0 0" dur="5000" easing='linear' repeat="indefinite"></a-animation>
-				<a-entity position="0 -.5 1" rotation="0 90 0" text-geometry="value: Startup Shell; font: #exoItalicFont; style: italic; size: 0.8; weight: bold; height: 0;" material="shader: flat; color: #6b070a">
+			<a-obj-model src="#shell_obj" mtl="#shell_mtl" scale=".5 .5 .5" position="0, 1.5, 2.5" rotation='0 0 90'>
+				<a-animation attribute="rotation" to="0 360 0" dur="10000" easing='linear' repeat="indefinite"></a-animation>
+				<a-entity position="0 -.7 1" rotation="0 90 0" text-geometry="value: Startup Shell; font: #exoItalicFont; style: italic; size: 0.8; weight: bold; height: 0;" material="shader: flat; color: #6b070a">
 					
 				</a-entity>
 			</a-obj-model>
