added ar experience

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Polis</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -67,32 +67,10 @@
 
     <div class='card cardShadow'>
       <div class='card-block '>
-        <h3 class='card-header'>VR Experience</h3>
-        <p class='card-text'>This is a VR experience in AFRAME.</p>
-        <br>
-        <br>
+        <h3 class='card-header'>Augmented Reality Hologram</h3>
+        <iframe src="./firstDemo/ar1.html"></iframe>
       </div>
     </div>
-
-    <div class='card cardShadow'>
-      <div class='card-block '>
-        <h3 class='card-header'>VR Experience</h3>
-        <p class='card-text'>This is a VR experience in AFRAME.</p>
-        <br>
-        <br>
-      </div>
-    </div>
-
-    <div class='card cardShadow'>
-      <div class='card-block '>
-        <h3 class='card-header'>VR Experience</h3>
-        <p class='card-text'>This is a VR experience in AFRAME.</p>
-        <br>
-        <br>
-      </div>
-    </div> 
-  </div>
-
 
 <!-- <div class='card' style='margin: 30px;'>
   <div class='card-block'>
