--- a/firstDemo/vr.html
+++ b/firstDemo/vr.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <head>
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/examples/vendor/aframe/build/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
+<!-- <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script> -->
 <script src="https://unpkg.com/aframe-text-geometry-component@^0.5.0/dist/aframe-text-geometry-component.min.js"></script>
 </head>
 <body style='margin : 0px; overflow: hidden;'>
-	<a-scene embedded arjs='trackingMethod: best; debugUIEnabled: false;'>
+	<a-scene >
 		<a-assets>
 	      <a-asset-item id="shell_obj" src="./models/startupshell-logo3D_red.obj"></a-asset-item>
 	      <a-asset-item id="shell_mtl" src="./models/startupshell-logo3D_red.mtl"></a-asset-item>
 	      <a-asset-item id="exoItalicFont" src="./fonts/exo2BlackItalic.typeface.json"></a-asset-item>
   		</a-assets>
-      <a-anchor hit-testing-enabled='true'>
    		<!-- Add your augmented reality here -->
 			<!-- <a-box position='0 0.5 0' material='opacity: 0.5; side:double; color:red;'>
 				<a-torus-knot radius='0.26' radius-tubular='0.05'>
@@ -19,15 +18,14 @@
 				</a-torus-knot>
 			</a-box> -->
 			<!-- <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box> -->
-			<a-entity position="0 0 0" rotation="0 180 270">
-				<a-animation attribute="rotation" from="0 180 0" to="0 180 360" dur="10000" easing='linear' repeat="indefinite"></a-animation>
+			<a-entity position = "0 2 0" rotation="0 180 270">
+				<a-animation attribute="rotation" from="0 0 0" to="0 0 360" dur="10000" easing='linear' repeat="indefinite"></a-animation>
 				<a-obj-model src="#shell_obj" mtl="#shell_mtl" scale=".5 .5 .5" position="0, -1.5, 0" rotation='90 0 0'>
 					<a-entity position="0 -.7 1" rotation="0 90 0" text-geometry="value: Startup Shell; font: #exoItalicFont; style: italic; size: 0.8; weight: bold; height: 0;" material="shader: flat; color: #6b070a">
 					</a-entity>
 				</a-obj-model>
 			</a-entity>
-	      
-      </a-anchor>
-		<a-camera-static/>
+		<!-- <a-camera-static/> -->
+		<a-camera></a-camera>
 	</a-scene>
 </body>
