added media queries

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
   <style type="text/css">
+
+    @media (max-width: 767px) {
+
+      iframe{
+        border: none;
+        display: block;
+        margin: 0 auto;
+        width: 300px;
+        height: 150px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+      }
+    }
+
     .cardShadow{
 
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
