--- a/index.html
+++ b/index.html
@@ -10,19 +10,6 @@
 
   <style type="text/css">
 
-    @media (max-width: 767px) {
-
-      iframe{
-        border: none;
-        display: block;
-        margin: 0 auto;
-        width: 300px;
-        height: 150px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-      }
-    }
-
     .cardShadow{
 
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -60,6 +47,19 @@
       text-decoration:none;
       color:inherit;
       -webkit-tap-highlight-color: white;
+    }
+
+    @media only screen and (max-width: 767px) {
+
+      iframe{
+        border: none;
+        display: block;
+        margin: 0 auto;
+        width: 250px;
+        height: 125px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+      }
     }
   </style>
 </head>
