--- a/firstDemo/terpRowVR.html
+++ b/firstDemo/terpRowVR.html
@@ -3,19 +3,127 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/examples/vendor/aframe/build/aframe.min.js"></script>
 <!-- <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script> -->
 <script src="https://unpkg.com/aframe-text-geometry-component@^0.5.0/dist/aframe-text-geometry-component.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
+
+<script>
+
+	//https://stackoverflow.com/questions/43892281/a-frame-obj-model-displaying-but-broken/43893425#43893425
+	// $(document).ready(function(){
+
+	//   // var modelApapter = function(modelEl) {
+	//   //   if (!window['AFRAME'] && !modelEl) {
+	//   //     return;
+	//   //   }
+
+	//   //   modelEl.addEventListener('model-loaded', function(evt) {
+	//   //      var model = evt.detail.model;
+
+	//   //     traverse(model);
+ //   //  	});
+	//   // };
+
+	//   // modelApapter(document.getElementById('shell_obj'));
+
+	//   var model = document.getElementById('shell_obj');
+
+	//   traverse(model);
+
+	//   function traverse(node) {
+
+	//   	//TODO: make a for loop getting error on children.forEach
+	//   	var children = node.children;
+
+	//   	for(var i=0; i<children.length; i++){
+
+	//   		var child = children[i];
+
+	//   		if(child.children){
+	//   			traverse(child);
+	//   		}
+
+	//   		updateMaterialSide(child['material'], THREE.DoubleSide);
+	//   	}
+
+	//   	updateMaterialSide(node.getObject3D('mesh').material, THREE.DoubleSide);
+	//     // children.forEach(function(child) {
+	//     //   if (child.children) {
+	//     //     traverse(child);
+	//     //   }
+
+	//     //   updateMaterialSide(child['material'], THREE.DoubleSide);
+	//     // });
+	//   }
+
+	//   function updateMaterialSide(material, side) {
+	//     if (!material) {
+	//       return;
+	//     }
+
+	//     if (material instanceof THREE.Material) {
+	//       material.side = side;
+	//       material.needsUpdate = true
+	//     } else if (material instanceof THREE.MultiMaterial) {
+	//       material.materials.forEach(function(childMaterial) {
+	//         updateMaterial(childMaterial, side);
+	//       });
+	//     }
+	//   }
+	// });
+
+	function updateMaterialSide (material, side) {
+		    if (!material) {
+		      return;
+		    }
+
+		    if (material instanceof THREE.Material) {
+		      material.side = side;
+		      material.needsUpdate = true
+		    } else if (material instanceof THREE.MultiMaterial) {
+		      material.materials.forEach(function(childMaterial) {
+		        updateMaterial(childMaterial, side);
+		      });
+		    }
+	
+	}
+	AFRAME.registerComponent('double-texture', {
+
+		schema: {
+
+		},
+
+		init: function () {
+			var el = this.el;
+			var data = this.data;
+			var material = el.getObject3D('mesh').material;
+
+			updateMaterialSide(material, THREE.DoubleSide);
+
+			console.log("INIT");
+		}
+	});
+</script>
+
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene >
 		<a-assets>
-	      <a-asset-item id="shell_obj" src="./models/BuildingModel2.obj"></a-asset-item>
-	      <a-asset-item id="shell_mtl" src="./models/BuildingModel2.mtl"></a-asset-item>
+	      <!-- <a-asset-item id="shell_obj" src="./models/BuildingModel2.obj"></a-asset-item>
+	      <a-asset-item id="shell_mtl" src="./models/BuildingModel2.mtl"></a-asset-item> -->
+
+	      <a-asset-item id="shell_obj" src="./models/tRowShell.obj"></a-asset-item>
+	      <a-asset-item id="shell_mtl" src="./models/tRowShell.mtl"></a-asset-item>
+
+	      <a-asset-item id="stadium_mtl" src="./models/stadium2.mtl"></a-asset-item>
+	      <a-asset-item id="stadium_obj" src="./models/stadium2.obj"></a-asset-item>
+
 	      <img id="map" src='./img/grounds.png'></img>
 	      <a-asset-item id="exoItalicFont" src="./fonts/exo2BlackItalic.typeface.json"></a-asset-item>
   		</a-assets>
 		<!-- Add your augmented reality here -->
 		<a-entity position="-4.5 0 3.3" rotation="0 0 0">
 			<!-- <a-animation attribute="rotation" from="0 0 0" to="0 360 0" dur="10000" easing='linear' repeat="indefinite"></a-animation> -->
-			<a-obj-model src="#shell_obj" mtl="#shell_mtl" scale="2 2 2" position="0, 0, 0" rotation='0 0 0'>
+			<!-- <a-obj-model double-texture src="#shell_obj" mtl="#shell_mtl" scale="2 2 2" position="0, 0, 0" rotation='0 0 0'> -->
+				<a-obj-model double-texture src="#stadium_obj" mtl="#stadium_mtl" scale=".01 .01 .01" position="0, -3, 0" rotation='0 180 0'>
 				<!-- <a-entity position="0 -.7 1" rotation="0 90 0" text-geometry="value: Startup Shell; font: #exoItalicFont; style: italic; size: 0.8; weight: bold; height: 0;" material="shader: flat; color: #6b070a"> -->
 				<!-- </a-entity> -->
 			</a-obj-model>
