--- a/firstDemo/terpRow.html
+++ b/firstDemo/terpRow.html
@@ -13,13 +13,13 @@
   		</a-assets>
       <a-anchor hit-testing-enabled='true'>
    		<!-- Add your augmented reality here -->
-			<a-entity position="-4.5 0 3.3" scale='.5 .5 .5' rotation="0 0 0">
+			<a-entity position="-2.29 0 1.63" scale='.5 .5 .5' rotation="0 0 0">
 			<!-- <a-animation attribute="rotation" from="0 0 0" to="0 360 0" dur="10000" easing='linear' repeat="indefinite"></a-animation> -->
 			<a-obj-model src="#shell_obj" mtl="#shell_mtl" scale="3 3 3" position="0, 0, 0" rotation='0 0 0'>
 				<!-- <a-entity position="0 -.7 1" rotation="0 90 0" text-geometry="value: Startup Shell; font: #exoItalicFont; style: italic; size: 0.8; weight: bold; height: 0;" material="shader: flat; color: #6b070a"> -->
 				<!-- </a-entity> -->
 			</a-obj-model>
-			<a-plane src="#map" rotation="269.9777130656439 0 0" position="4.528 -.2 -3.269" scale="8.119 6.246 4.819"></a-plane>
+			<a-plane src="#map" rotation="269.9777130656439 0 0" position="4.528 0 -3.269" scale="8.119 6.246 4.819"></a-plane>
 		</a-entity>
       </a-anchor>
 	  <a-camera-static/>
