--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
       margin-bottom: 10px;
     }
 
+    .dir{
+      width: 300px;
+      height: 300px;
+    }
+
     .noHighlight{
       border:none;
       outline:none;
@@ -60,6 +65,11 @@
         margin-top: 10px;
         margin-bottom: 10px;
       }
+
+      .dir{
+        width: 125px;
+        height: 125px;
+      }
     }
     
   </style>
@@ -77,6 +87,8 @@
     <div class='card cardShadow topCard'>
       <div class='card-block'>
         <h3 class='card-header'><a class='noHighlight' href='./experiences/artSoc.html'>Art Gallery VR Experience</a></h3>
+        <br>
+        <p style="text-align: center">Experience full screen <a href='./experiences/artSoc.html'>here</a></p>
         <iframe src="./experiences/artSoc.html"></iframe>
       </div>
     </div>
@@ -84,6 +96,8 @@
     <div class='card cardShadow'>
       <div class='card-block '>
         <h3 class='card-header'><a class='noHighlight' href="./experiences/MilkBoyArtHouse.html">Bar/Concert Venue Virtual Experience</a></h3>
+          <br>
+          <p style="text-align: center">Experience full screen <a href="./experiences/MilkBoyArtHouse.html">here</a></p>
         <iframe src="./experiences/MilkBoyArtHouse.html"></iframe>
       </div>
     </div>
@@ -92,9 +106,11 @@
       <div class='card-block '>
         <h3 class='card-header'><a class='noHighlight' href="./firstDemo/ar1.html">Augmented Reality Hologram</a></h3>
         <br>
-        <p style="text-align: center">Use <a href="./img/hiro.png">this</a> marker to place the hologram</p>
+        <!-- <p style="text-align: center">Use <a href="./img/hiro.png">this</a> marker to place the hologram</p> -->
+        <!-- <iframe src="./firstDemo/ar1.html"></iframe> -->
+        <p style="text-align: center">Open <a href="./img/hiro.png">this</a> marker and go to <a href="./firstDemo/ar1.html">this</a> page, then point phone at the marker to show hologram.</p>
         <br>
-        <iframe src="./firstDemo/ar1.html"></iframe>
+        <p style="text-align: center"><img class='dir' src="./img/pointPhone.png" alt='logo'></p>
       </div>
     </div>
 
