--- a/firstDemo/terpRowShell.html
+++ b/firstDemo/terpRowShell.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <head>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/examples/vendor/aframe/build/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
+<script src="./js/aframe.min.js"></script>
+<script src="./js/aframe-ar.js"></script>
 <script src="https://unpkg.com/aframe-text-geometry-component@^0.5.0/dist/aframe-text-geometry-component.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='trackingMethod: best; debugUIEnabled: false;'>
 		<a-assets>
-	      <a-asset-item id="shell_obj" src="./models/tRowShell.obj"></a-asset-item>
-	      <a-asset-item id="shell_mtl" src="./models/tRowShell.mtl"></a-asset-item>
+	      <a-asset-item id="shell_obj" src="./models/trowShellTri.obj"></a-asset-item>
+	      <a-asset-item id="shell_mtl" src="./models/trowShellTri.mtl"></a-asset-item>
   		</a-assets>
-      <a-anchor hit-testing-enabled='true'>
-   		<!-- Add your augmented reality here -->
-			<a-entity position="-4.5 0 3.3" rotation="0 0 0">
-			<!-- <a-animation attribute="rotation" from="0 0 0" to="0 360 0" dur="10000" easing='linear' repeat="indefinite"></a-animation> -->
-			<a-obj-model src="#shell_obj" mtl="#shell_mtl" scale="3 3 3" position="0, 0, 0" rotation='0 0 0'>
-				<!-- <a-entity position="0 -.7 1" rotation="0 90 0" text-geometry="value: Startup Shell; font: #exoItalicFont; style: italic; size: 0.8; weight: bold; height: 0;" material="shader: flat; color: #6b070a"> -->
-				<!-- </a-entity> -->
+
+      <a-marker preset='custom' url='./markers/tr.patt'>
+		<a-entity position="0 0 0" rotation="0 0 0">
+			<a-animation attribute="rotation" from="0 0 0" to="0 360 0" dur="10000" easing='linear' repeat="indefinite"></a-animation>
+			<a-obj-model src="#shell_obj" mtl="#shell_mtl" scale="1 1 1" position="-.85, 0, 0" rotation='90 0 0'>
+				<a-entity position="-.5 0 -2" rotation="-90 0 0" scale='.5 .5 .5' text-geometry="value: Terrapin Row; style: italic; size: 0.8; weight: bold; height: 0;" material="shader: flat; color: #6b070a">
+				</a-entity>
 			</a-obj-model>
 		</a-entity>
-      </a-anchor>
-	  <a-camera-static/>
+      </a-marker>
+	  <a-entity camera></a-entity>
 	</a-scene>
 </body>
