--- a/firstDemo/terpRowShell.html
+++ b/firstDemo/terpRowShell.html
@@ -4,8 +4,39 @@
 <script src="./js/aframe-ar.js"></script>
 <script src="https://unpkg.com/aframe-text-geometry-component@^0.5.0/dist/aframe-text-geometry-component.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<style type="text/css">
+	
+	.center {
+		width:300px;
+		height:300px;
+		position:absolute;
+		left:50%;
+		top:38%;
+		margin:-75px 0 0 -135px;
+	}
+
+	.directions{
+		background-color: rgba(255, 255, 255, .5);
+		text-align: center;
+		margin-right: 40%;
+		margin-left: 40%;
+		margin-top: 60%
+	}
+</style>
+
 </head>
+	
+	<!-- https://stackoverflow.com/questions/44799413/how-to-detect-when-marker-is-found-in-ar-js/44809425#44809425 -->
+	<!-- https://github.com/donmccurdy/aframe-extras/issues/180 -->
+	<!-- <img src='./img/hitArea.png' class='center'>
+	<h3 class='directions'>Point Toward Marker</h3> -->
+
+
 <body style='margin : 0px; overflow: hidden;'>
+
+	
+
 	<a-scene embedded arjs='trackingMethod: best; debugUIEnabled: false;'>
 		<a-assets>
 	      <a-asset-item id="shell_obj" src="./models/trowShellTri.obj"></a-asset-item>
