--- a/firstDemo/terpRowVR1.html
+++ b/firstDemo/terpRowVR1.html
@@ -96,7 +96,7 @@
 	      <img id="map" src='./img/mapHD.jpg'></img>
   		</a-assets>
 
-  		<a-obj-model id="terpRowBuildingModel" link-model="on: click; target: #fadeShield;" src="#building_obj" mtl="#building_mtl" scale="1.886 1.886 1.886" position="-5.037 0 11.792" rotation="0 -6.990085100596043 0" material=""></a-obj-model>
+  		<a-obj-model id="terpRowBuildingModel" link-model="on: mouseenter; target: #fadeShield;" src="#building_obj" mtl="#building_mtl" scale="1.886 1.886 1.886" position="-5.037 0 11.792" rotation="0 -6.990085100596043 0" material=""></a-obj-model>
   		<a-plane id='earthMap' src="#map" rotation="-87.892 -177.445 170.34" scale="32.917 25.324 19.541" position="1.376 0 4.064"></a-plane>
 
   		<a-entity position="-4.664 -0.083 1.444" rotation="-39.19031318694831 86.34473972621505 0" text-geometry="height:0;size:0.8;style:bold;weight:bold;value:McKeldin Library" material="shader:flat;color:#6b070a" scale="0.446 0.446 0.446"></a-entity>
