added updated directions

--- a/experiences/MilkBoyArtHouse.html
+++ b/experiences/MilkBoyArtHouse.html
@@ -45,6 +45,7 @@
     	if (!AFRAME.utils.device.isMobile()) {
 
 	    	cam.setAttribute("look-controls", "pointerLockEnabled: true");
+        sceneEl.setAttribute("cursor", "");
 
             //document.querySelector('#mobileDirections').style.display = 'none';
 	    }
@@ -193,7 +194,7 @@
      		<img id="rahimDesc" src="./img/MilkboyArthouse/rahimDesc.png" preload="true"/>
      		<img id="warrenwolfDesc" src="./img/MilkboyArthouse/warrenwolfDesc.png" preload="true"/>
 
-     		<img id="welcome" src="./img/MilkboyArthouse/welcome.png" preload="true"/>
+     		<img id="welcome" src="./img/MilkboyArthouse/welcome_2.png" preload="true"/>
      		<img id="visitDesc" src="./img/MilkboyArthouse/parkVisitButton.png" preload="true"/>
             <img id=tripodCover src="./img/icons/BE_tripodLogo.png" preload="true"/>
 		</a-assets>
