--- a/firstDemo/terpRow.html
+++ b/firstDemo/terpRow.html
@@ -30,7 +30,7 @@
 	function transferPage(){
 
 		//TODO: transfer this to the 360 tour
-		location.href = 'http://www.polisvr.com';
+		location.href = './terpRowTour.html';
 	}
 </script>
 </head>
