changed image type

--- a/firstDemo/terpRowTour.html
+++ b/firstDemo/terpRowTour.html
@@ -138,9 +138,9 @@
 
     <a-scene>
     	<a-assets>
-	      <img id="courtyard" src="./img/360/trow_courtYard_2.jpg"></img>
-	      <img id="studyRoom" src="./img/360/trow_study_2.jpg"></img>
-        <img id="front" src="./img/360/trow_front.jpg"></img>
+	      <img id="courtyard" src="./img/360/trow_courtYard_2.JPG"></img>
+	      <img id="studyRoom" src="./img/360/trow_study_2.JPG"></img>
+        <img id="front" src="./img/360/trow_front.JPG"></img>
   		</a-assets>
 
     	<a-sky id="sky" src='#front'></a-sky>
