--- a/ar/polisAR.html
+++ b/ar/polisAR.html
@@ -39,15 +39,15 @@
 
 	<a-scene embedded arjs='trackingMethod: best; debugUIEnabled: false;'>
 		<a-assets>
-	      <a-asset-item id="shell_obj" src="./models/trowShellTri.obj"></a-asset-item>
-	      <a-asset-item id="shell_mtl" src="./models/trowShellTri.mtl"></a-asset-item>
+	      <a-asset-item id="polis_obj" src="./models/polisModel3.obj"></a-asset-item>
+	      <a-asset-item id="polis_mtl" src="./models/polisModel3.mtl"></a-asset-item>
   		</a-assets>
 
       <a-marker preset='custom' url='./markers/polis_marker_v2.patt'>
 		<a-entity position="0 0 0" rotation="0 0 0">
 			<a-animation attribute="rotation" from="0 0 0" to="0 360 0" dur="10000" easing='linear' repeat="indefinite"></a-animation>
-			<a-obj-model src="#shell_obj" mtl="#shell_mtl" scale="1 1 1" position="-.85, 0, 0" rotation='90 0 0'>
-				<a-entity position="-.5 0 -2" rotation="-90 0 0" scale='.5 .5 .5' text-geometry="value: Terrapin Row; style: italic; size: 0.8; weight: bold; height: 0;" material="shader: flat; color: #6b070a">
+			<a-obj-model src="#polis_obj" mtl="#polis_mtl" scale="1 1 1" position="0, 1, 0" rotation='0 0 270'>
+				<!-- <a-entity position="-.5 0 -2" rotation="-90 0 0" scale='.5 .5 .5' text-geometry="value: Your Logo Here; style: italic; size: 0.8; weight: bold; height: 0;" material="shader: flat; color: #ffffff"> -->
 				</a-entity>
 			</a-obj-model>
 		</a-entity>
